maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	var direct=Direction.SUD;
def wall(){
	if(estFaceMur){
		droite();
		if(estFaceMur){
			droite();
			if(estFaceMur){
				droite();
			}else avance();
		}else avance();
	}else{
		gauche();
		if(estFaceMur){
			droite();
			avance();
		}else{
			avance();
			}
		}
	}
def direction(d:Direction){
	direct=getDirection();
	setDirection(d);
	if(estFaceMur){
		setDirection(direct);
		return false
	}
	return true
}
while(!estSurBiscuit){
	wall();
	if(direction(Direction.NORD)){
		while(!estFaceMur){ avance(); }
	}
}
}

